generated/CScriptParser.cpp

// Generated from D:/MyCode/CScriptEngine/src/frontend/parser/CScript.g4 by ANTLR 4.13.2


#include "CScriptVisitor.h"

#include "CScriptParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CScriptParserStaticData final {
  CScriptParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CScriptParserStaticData(const CScriptParserStaticData&) = delete;
  CScriptParserStaticData(CScriptParserStaticData&&) = delete;
  CScriptParserStaticData& operator=(const CScriptParserStaticData&) = delete;
  CScriptParserStaticData& operator=(CScriptParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag cscriptParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<CScriptParserStaticData> cscriptParserStaticData = nullptr;

void cscriptParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (cscriptParserStaticData != nullptr) {
    return;
  }
#else
  assert(cscriptParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CScriptParserStaticData>(
    std::vector<std::string>{
      "program", "stmt", "import_stmt", "include_stmt", "register_callback_stmt", 
      "block", "var_decl", "func_decl", "extern_decl", "func_decl_args", 
      "ident", "type", "struct_decl", "union_decl", "struct_members", "enum_decl", 
      "enum_list", "enum_item", "init_list", "expr", "or_expr", "and_expr", 
      "bit_or_expr", "bit_xor_expr", "bit_and_expr", "eq_expr", "rel_expr", 
      "shift_expr", "add_expr", "mul_expr", "unary_expr", "primary_expr", 
      "call_args", "numeric", "if_stmt", "while_stmt", "for_stmt", "for_init", 
      "for_cond", "for_incr", "do_while_stmt", "try_catch_stmt", "catch_block", 
      "switch_stmt", "case_list", "case_stmt"
    },
    std::vector<std::string>{
      "", "'import'", "'as'", "'from'", "'include'", "'register'", "'::'", 
      "'try'", "'catch'", "'return'", "'if'", "'else'", "'while'", "'for'", 
      "'do'", "'switch'", "'case'", "'default'", "'continue'", "'break'", 
      "'struct'", "'union'", "'enum'", "'const'", "'extern'", "'throw'", 
      "", "", "", "", "", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", 
      "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", "'&'", "'|'", 
      "'^'", "'~'", "'<<'", "'>>'", "'\\u003F'", "':'", "','", "';'", "'('", 
      "')'", "'{'", "'}'", "'['", "']'", "'.'", "'='", "'+='", "'-='", "'*='", 
      "'/='", "'%='", "'++'", "'--'", "'...'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "RETURN", "IF", "ELSE", "WHILE", 
      "FOR", "DO", "SWITCH", "CASE", "DEFAULT", "CONTINUE", "BREAK", "STRUCT_KW", 
      "UNION_KW", "ENUM_KW", "CONST_KW", "EXTERN_KW", "THROW", "INTEGER", 
      "DOUBLE", "CHAR", "STRING", "IDENTIFIER", "PLUS", "MINUS", "MUL", 
      "DIV", "MOD", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", "AND", "OR", 
      "NOT", "BITAND", "BITOR", "XOR", "NOTBIT", "LSHIFT", "RSHIFT", "QUESTION", 
      "COLON", "COMMA", "SEMI", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
      "LBRACKET", "RBRACKET", "DOT", "ASSIGN", "PLUS_EQ", "MINUS_EQ", "MUL_EQ", 
      "DIV_EQ", "MOD_EQ", "INC", "DEC", "ELLIPSIS", "COMMENT", "MULTI_LINE_COMMENT", 
      "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  cscriptParserStaticData = std::move(staticData);
}

}

CScriptParser::CScriptParser(TokenStream *input) : CScriptParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CScriptParser::CScriptParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CScriptParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *cscriptParserStaticData->atn, cscriptParserStaticData->decisionToDFA, cscriptParserStaticData->sharedContextCache, options);
}

CScriptParser::~CScriptParser() {
  delete _interpreter;
}

const atn::ATN& CScriptParser::getATN() const {
  return *cscriptParserStaticData->atn;
}

std::string CScriptParser::getGrammarFileName() const {
  return "CScript.g4";
}

const std::vector<std::string>& CScriptParser::getRuleNames() const {
  return cscriptParserStaticData->ruleNames;
}

const dfa::Vocabulary& CScriptParser::getVocabulary() const {
  return cscriptParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CScriptParser::getSerializedATN() const {
  return cscriptParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

CScriptParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CScriptParser::ProgramContext::EOF() {
  return getToken(CScriptParser::EOF, 0);
}

std::vector<CScriptParser::StmtContext *> CScriptParser::ProgramContext::stmt() {
  return getRuleContexts<CScriptParser::StmtContext>();
}

CScriptParser::StmtContext* CScriptParser::ProgramContext::stmt(size_t i) {
  return getRuleContext<CScriptParser::StmtContext>(i);
}


size_t CScriptParser::ProgramContext::getRuleIndex() const {
  return CScriptParser::RuleProgram;
}


std::any CScriptParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CScriptVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

CScriptParser::ProgramContext* CScriptParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, CScriptParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 36363065733478066) != 0)) {
      setState(92);
      stmt();
      setState(97);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(98);
    match(CScriptParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

CScriptParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CScriptParser::Var_declContext* CScriptParser::StmtContext::var_decl() {
  return getRuleContext<CScriptParser::Var_declContext>(0);
}

tree::TerminalNode* CScriptParser::StmtContext::SEMI() {
  return getToken(CScriptParser::SEMI, 0);
}

CScriptParser::Enum_declContext* CScriptParser::StmtContext::enum_decl() {
  return getRuleContext<CScriptParser::Enum_declContext>(0);
}

CScriptParser::Func_declContext* CScriptParser::StmtContext::func_decl() {
  return getRuleContext<CScriptParser::Func_declContext>(0);
}

CScriptParser::Extern_declContext* CScriptParser::StmtContext::extern_decl() {
  return getRuleContext<CScriptParser::Extern_declContext>(0);
}

CScriptParser::Struct_declContext* CScriptParser::StmtContext::struct_decl() {
  return getRuleContext<CScriptParser::Struct_declContext>(0);
}

CScriptParser::Union_declContext* CScriptParser::StmtContext::union_decl() {
  return getRuleContext<CScriptParser::Union_declContext>(0);
}

CScriptParser::ExprContext* CScriptParser::StmtContext::expr() {
  return getRuleContext<CScriptParser::ExprContext>(0);
}

tree::TerminalNode* CScriptParser::StmtContext::MUL() {
  return getToken(CScriptParser::MUL, 0);
}

CScriptParser::IdentContext* CScriptParser::StmtContext::ident() {
  return getRuleContext<CScriptParser::IdentContext>(0);
}

tree::TerminalNode* CScriptParser::StmtContext::ASSIGN() {
  return getToken(CScriptParser::ASSIGN, 0);
}

tree::TerminalNode* CScriptParser::StmtContext::RETURN() {
  return getToken(CScriptParser::RETURN, 0);
}

CScriptParser::If_stmtContext* CScriptParser::StmtContext::if_stmt() {
  return getRuleContext<CScriptParser::If_stmtContext>(0);
}

CScriptParser::While_stmtContext* CScriptParser::StmtContext::while_stmt() {
  return getRuleContext<CScriptParser::While_stmtContext>(0);
}

CScriptParser::For_stmtContext* CScriptParser::StmtContext::for_stmt() {
  return getRuleContext<CScriptParser::For_stmtContext>(0);
}

CScriptParser::Do_while_stmtContext* CScriptParser::StmtContext::do_while_stmt() {
  return getRuleContext<CScriptParser::Do_while_stmtContext>(0);
}

CScriptParser::Switch_stmtContext* CScriptParser::StmtContext::switch_stmt() {
  return getRuleContext<CScriptParser::Switch_stmtContext>(0);
}

CScriptParser::Try_catch_stmtContext* CScriptParser::StmtContext::try_catch_stmt() {
  return getRuleContext<CScriptParser::Try_catch_stmtContext>(0);
}

tree::TerminalNode* CScriptParser::StmtContext::CONTINUE() {
  return getToken(CScriptParser::CONTINUE, 0);
}

tree::TerminalNode* CScriptParser::StmtContext::BREAK() {
  return getToken(CScriptParser::BREAK, 0);
}

CScriptParser::Register_callback_stmtContext* CScriptParser::StmtContext::register_callback_stmt() {
  return getRuleContext<CScriptParser::Register_callback_stmtContext>(0);
}

CScriptParser::Import_stmtContext* CScriptParser::StmtContext::import_stmt() {
  return getRuleContext<CScriptParser::Import_stmtContext>(0);
}

CScriptParser::Include_stmtContext* CScriptParser::StmtContext::include_stmt() {
  return getRuleContext<CScriptParser::Include_stmtContext>(0);
}


size_t CScriptParser::StmtContext::getRuleIndex() const {
  return CScriptParser::RuleStmt;
}


std::any CScriptParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CScriptVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

CScriptParser::StmtContext* CScriptParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 2, CScriptParser::RuleStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(140);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(100);
      var_decl();
      setState(101);
      match(CScriptParser::SEMI);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(103);
      enum_decl();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(104);
      func_decl();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(105);
      extern_decl();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(106);
      struct_decl();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(107);
      struct_decl();
      setState(108);
      match(CScriptParser::SEMI);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(110);
      union_decl();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(111);
      union_decl();
      setState(112);
      match(CScriptParser::SEMI);
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(114);
      expr();
      setState(115);
      match(CScriptParser::SEMI);
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(117);
      match(CScriptParser::MUL);
      setState(118);
      ident();
      setState(119);
      match(CScriptParser::ASSIGN);
      setState(120);
      expr();
      setState(121);
      match(CScriptParser::SEMI);
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(123);
      match(CScriptParser::RETURN);
      setState(124);
      expr();
      setState(125);
      match(CScriptParser::SEMI);
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(127);
      if_stmt();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(128);
      while_stmt();
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(129);
      for_stmt();
      break;
    }

    case 15: {
      enterOuterAlt(_localctx, 15);
      setState(130);
      do_while_stmt();
      break;
    }

    case 16: {
      enterOuterAlt(_localctx, 16);
      setState(131);
      switch_stmt();
      break;
    }

    case 17: {
      enterOuterAlt(_localctx, 17);
      setState(132);
      try_catch_stmt();
      break;
    }

    case 18: {
      enterOuterAlt(_localctx, 18);
      setState(133);
      match(CScriptParser::CONTINUE);
      setState(134);
      match(CScriptParser::SEMI);
      break;
    }

    case 19: {
      enterOuterAlt(_localctx, 19);
      setState(135);
      match(CScriptParser::BREAK);
      setState(136);
      match(CScriptParser::SEMI);
      break;
    }

    case 20: {
      enterOuterAlt(_localctx, 20);
      setState(137);
      register_callback_stmt();
      break;
    }

    case 21: {
      enterOuterAlt(_localctx, 21);
      setState(138);
      import_stmt();
      break;
    }

    case 22: {
      enterOuterAlt(_localctx, 22);
      setState(139);
      include_stmt();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Import_stmtContext ------------------------------------------------------------------

CScriptParser::Import_stmtContext::Import_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CScriptParser::Import_stmtContext::STRING() {
  return getToken(CScriptParser::STRING, 0);
}

tree::TerminalNode* CScriptParser::Import_stmtContext::SEMI() {
  return getToken(CScriptParser::SEMI, 0);
}

std::vector<CScriptParser::IdentContext *> CScriptParser::Import_stmtContext::ident() {
  return getRuleContexts<CScriptParser::IdentContext>();
}

CScriptParser::IdentContext* CScriptParser::Import_stmtContext::ident(size_t i) {
  return getRuleContext<CScriptParser::IdentContext>(i);
}

tree::TerminalNode* CScriptParser::Import_stmtContext::LBRACE() {
  return getToken(CScriptParser::LBRACE, 0);
}

tree::TerminalNode* CScriptParser::Import_stmtContext::RBRACE() {
  return getToken(CScriptParser::RBRACE, 0);
}

std::vector<tree::TerminalNode *> CScriptParser::Import_stmtContext::COMMA() {
  return getTokens(CScriptParser::COMMA);
}

tree::TerminalNode* CScriptParser::Import_stmtContext::COMMA(size_t i) {
  return getToken(CScriptParser::COMMA, i);
}


size_t CScriptParser::Import_stmtContext::getRuleIndex() const {
  return CScriptParser::RuleImport_stmt;
}


std::any CScriptParser::Import_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CScriptVisitor*>(visitor))
    return parserVisitor->visitImport_stmt(this);
  else
    return visitor->visitChildren(this);
}

CScriptParser::Import_stmtContext* CScriptParser::import_stmt() {
  Import_stmtContext *_localctx = _tracker.createInstance<Import_stmtContext>(_ctx, getState());
  enterRule(_localctx, 4, CScriptParser::RuleImport_stmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(164);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(142);
      match(CScriptParser::T__0);
      setState(143);
      match(CScriptParser::STRING);
      setState(146);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == CScriptParser::T__1) {
        setState(144);
        match(CScriptParser::T__1);
        setState(145);
        ident();
      }
      setState(148);
      match(CScriptParser::SEMI);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(149);
      match(CScriptParser::T__0);
      setState(150);
      match(CScriptParser::LBRACE);
      setState(151);
      ident();
      setState(156);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == CScriptParser::COMMA) {
        setState(152);
        match(CScriptParser::COMMA);
        setState(153);
        ident();
        setState(158);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(159);
      match(CScriptParser::RBRACE);
      setState(160);
      match(CScriptParser::T__2);
      setState(161);
      match(CScriptParser::STRING);
      setState(162);
      match(CScriptParser::SEMI);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Include_stmtContext ------------------------------------------------------------------

CScriptParser::Include_stmtContext::Include_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CScriptParser::Include_stmtContext::STRING() {
  return getToken(CScriptParser::STRING, 0);
}

tree::TerminalNode* CScriptParser::Include_stmtContext::SEMI() {
  return getToken(CScriptParser::SEMI, 0);
}


size_t CScriptParser::Include_stmtContext::getRuleIndex() const {
  return CScriptParser::RuleInclude_stmt;
}


std::any CScriptParser::Include_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CScriptVisitor*>(visitor))
    return parserVisitor->visitInclude_stmt(this);
  else
    return visitor->visitChildren(this);
}

CScriptParser::Include_stmtContext* CScriptParser::include_stmt() {
  Include_stmtContext *_localctx = _tracker.createInstance<Include_stmtContext>(_ctx, getState());
  enterRule(_localctx, 6, CScriptParser::RuleInclude_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(166);
    match(CScriptParser::T__3);
    setState(167);
    match(CScriptParser::STRING);
    setState(168);
    match(CScriptParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Register_callback_stmtContext ------------------------------------------------------------------

CScriptParser::Register_callback_stmtContext::Register_callback_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CScriptParser::IdentContext *> CScriptParser::Register_callback_stmtContext::ident() {
  return getRuleContexts<CScriptParser::IdentContext>();
}

CScriptParser::IdentContext* CScriptParser::Register_callback_stmtContext::ident(size_t i) {
  return getRuleContext<CScriptParser::IdentContext>(i);
}

tree::TerminalNode* CScriptParser::Register_callback_stmtContext::LPAREN() {
  return getToken(CScriptParser::LPAREN, 0);
}

tree::TerminalNode* CScriptParser::Register_callback_stmtContext::RPAREN() {
  return getToken(CScriptParser::RPAREN, 0);
}

tree::TerminalNode* CScriptParser::Register_callback_stmtContext::SEMI() {
  return getToken(CScriptParser::SEMI, 0);
}

CScriptParser::Func_decl_argsContext* CScriptParser::Register_callback_stmtContext::func_decl_args() {
  return getRuleContext<CScriptParser::Func_decl_argsContext>(0);
}


size_t CScriptParser::Register_callback_stmtContext::getRuleIndex() const {
  return CScriptParser::RuleRegister_callback_stmt;
}


std::any CScriptParser::Register_callback_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CScriptVisitor*>(visitor))
    return parserVisitor->visitRegister_callback_stmt(this);
  else
    return visitor->visitChildren(this);
}

CScriptParser::Register_callback_stmtContext* CScriptParser::register_callback_stmt() {
  Register_callback_stmtContext *_localctx = _tracker.createInstance<Register_callback_stmtContext>(_ctx, getState());
  enterRule(_localctx, 8, CScriptParser::RuleRegister_callback_stmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(170);
    match(CScriptParser::T__4);
    setState(171);
    ident();
    setState(172);
    match(CScriptParser::T__1);
    setState(173);
    ident();
    setState(174);
    match(CScriptParser::LPAREN);
    setState(176);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1087373312) != 0)) {
      setState(175);
      func_decl_args();
    }
    setState(178);
    match(CScriptParser::RPAREN);
    setState(179);
    match(CScriptParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

CScriptParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CScriptParser::BlockContext::LBRACE() {
  return getToken(CScriptParser::LBRACE, 0);
}

tree::TerminalNode* CScriptParser::BlockContext::RBRACE() {
  return getToken(CScriptParser::RBRACE, 0);
}

std::vector<CScriptParser::StmtContext *> CScriptParser::BlockContext::stmt() {
  return getRuleContexts<CScriptParser::StmtContext>();
}

CScriptParser::StmtContext* CScriptParser::BlockContext::stmt(size_t i) {
  return getRuleContext<CScriptParser::StmtContext>(i);
}


size_t CScriptParser::BlockContext::getRuleIndex() const {
  return CScriptParser::RuleBlock;
}


std::any CScriptParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CScriptVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

CScriptParser::BlockContext* CScriptParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 10, CScriptParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(191);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(181);
      match(CScriptParser::LBRACE);
      setState(185);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 36363065733478066) != 0)) {
        setState(182);
        stmt();
        setState(187);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(188);
      match(CScriptParser::RBRACE);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(189);
      match(CScriptParser::LBRACE);
      setState(190);
      match(CScriptParser::RBRACE);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_declContext ------------------------------------------------------------------

CScriptParser::Var_declContext::Var_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CScriptParser::TypeContext* CScriptParser::Var_declContext::type() {
  return getRuleContext<CScriptParser::TypeContext>(0);
}

std::vector<CScriptParser::IdentContext *> CScriptParser::Var_declContext::ident() {
